force-app/main/default/objects/Travel_Request_Line_Item__c/Travel_Request_Line_Item__c.object-meta.xml
<CustomObject>
    <description>The Travel Request Line Item object stores individual expense entries as a child of Travel Request. Each line item captures expense type, description, estimated cost, and actual cost. Line items aggregate via roll-up to calculate the parent request's total estimated and actual trip costs.</description>
    <label>Travel Request Line Item</label>
    <nameField>
        <displayFormat>LI-{0000}</displayFormat>
        <label>Line Item Name</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Request Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>