force-app/main/default/objects/Travel_Request_Line_Item__c/fields/Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost__c</fullName>
    <description>The actual post-trip cost for this expense line item. Rolled up to calculate the Total Actual Cost on the parent Travel Request for variance analysis.</description>
    <inlineHelpText>Enter the actual amount spent for this expense after the trip is completed.</inlineHelpText>
    <label>Actual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>