force-app/main/default/objects/Travel_Request_Line_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of this specific expense line item.</description>
    <inlineHelpText>Describe this expense in detail (e.g., "Round-trip flight SFO to JFK on United Airlines").</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>