force-app/main/default/objects/Travel_Request_Line_Item__c/fields/Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost__c</fullName>
    <description>The estimated pre-trip cost for this expense line item. Rolled up to calculate the Total Estimated Cost on the parent Travel Request.</description>
    <inlineHelpText>Enter the estimated cost for this expense before the trip occurs.</inlineHelpText>
    <label>Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>