force-app/main/default/objects/Travel_Request_Line_Item__c/fields/Travel_Request__c.field-meta.xml
<CustomField>
    <fullName>Travel_Request__c</fullName>
    <description>Master-Detail relationship linking this expense line item to its parent Travel Request.</description>
    <inlineHelpText>The Travel Request this expense line item belongs to.</inlineHelpText>
    <label>Travel Request</label>
    <referenceTo>Travel_Request__c</referenceTo>
    <relationshipLabel>Travel Request Line Items</relationshipLabel>
    <relationshipName>Travel_Request_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>